syntax = "proto3";

package com.ulyssesk.remote_grpc.grpc;

//声明grpc服务
service DanmuConsumer {
   /*
   以下 分别是 服务端 推送流， 客户端 推送流 ，双向流。
   */
  rpc PullDanmu (DanmuRequest) returns (stream DanmuResponse){}
}

message DanmuResponse {
    string platform = 1; // 平台
    string anchor = 2; // 主播
    string context = 3; // 内容
}

message DanmuRequest {
    bool result = 1; // 结果
}
